<resources>
    <string name="app_name">CiceroneApp</string>
    <string name="Cicerone">Cicerone</string>
    <string name="correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvidaste_tu_contraseña">¿Olvidaste tu\ncontraseña?</string>
    <string name="es_parte_de_cicerone">¿Es parte de \nCicerone?</string>
    <string name="registrate">Regístrate!</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="tel_fono">Teléfono</string>
    <string name="ciudad">Ciudad</string>
    <string name="registrar">REgistrar</string>
    <string name="facebook_app_id">796236860805014</string>
    <string name="fb_login_protocol_scheme">fb796236860805014</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="Listo">Listo</string>
    <string name="escane_qrcode">Escánea el código QR</string>
    <string name="cual_es_tu_problema">¿Cúal es tu problema?</string>
    <string name="lamentamos_oir_eso">Lamentamos oir eso y por ello haremos todo lo posible por resolverlo.</string>
    <string name="porfavor_elige">Por favor elige que enunciado se acerca a tu problema:</string>
    <string name="explicanos">Explicanos en que consiste el problema:</string>
    <string name="cuentanos">Cuéntanos:</string>
    <string name="gracias_por_tu_tiempo">Gracias por tu tiempo, te responderemos lo más rápido posible.</string>
    <string name="enviar">Enviar</string>
    <string name="favoritos">Favoritos</string>
    <string name="multimedia">Multimedia</string>
    <string name="calificacion">Calificación</string>
    <string name="fecha">Fecha</string>
    <string name="selecciona_una_fecha">Selecciona una fecha:</string>
    <string name="selecciona_una_hora">Selecciona una hora:</string>
    <string name="reservar">Reservar</string>

    <string-array name="categorias">
        <item>Iglesias y catedrales</item>
        <item>Edificios con valor arquitectonico</item>
        <item>Museos</item>
        <item>Lugares de interés</item>
    </string-array>

    <string-array name="problemas">
        <item>Elige un tipo de problema:</item>
        <item>Del Sistema</item>
        <item>Del Sitio</item>
        <item>Del Personal</item>
    </string-array>

</resources>
