<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportProblemActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSendReport"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange"
        app:navigationContentDescription="@string/Cicerone"
        app:title="@string/Cicerone"
        app:titleMarginStart="30dp"
        app:titleTextColor="@color/white" />
    <TextView
        android:id="@+id/txtCualEsTuProblema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cual_es_tu_problema"
        android:fontFamily="@font/source_sans_pro_bold"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_below="@id/toolbarSendReport"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/txtLamentamosOirEso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lamentamos_oir_eso"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/source_sans_pro"
        android:textStyle="normal"
        android:layout_below="@id/txtCualEsTuProblema"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txtPorFavorElige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/porfavor_elige"
        android:textStyle="normal"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_below="@id/txtLamentamosOirEso"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/source_sans_pro"
        />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spnProblemas"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:tooltipText="Elige un problema"/>






</RelativeLayout>